--- a/mobile.css
+++ b/mobile.css
@@ -3,37 +3,45 @@
     padding: 0;
     background-color: white;
     font-family: 'Segoe UI', 'Helvetica', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20pt;
+    font-size: 1.05em;
 }
 
-body {
-    width: 300px;
-    margin: 0 auto;
+header {
+    margin-top: 20px;
+    width: 100%;
+}
+
+nav {
     display: flex;
-    flex-direction: column;
 }
 
 #monogram {
-    width: 150px;
-    height: 150px;
-    padding-top: 18px;
-    display: block;
-    margin: auto;
+    width: 70px;
+    height: 70px;
+    padding-top: 5px;
+    float: left;
+}
+
+ul {
+    display: flex;
 }
 
 ul li {
     list-style-type: none;
+    flex-direction: row;
+    padding: 15px;
+    padding-top: 20px;
 }
 
 ul li a {
-    display: block;
-    text-align: center;
-    padding: 22px;
     text-decoration: none;
 }
 
-hr {
-    width: 221px;
+body {
+    width: 350px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
 }
 
 footer {
