--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,6 @@
 body {
     width: 400px;
     margin: 0 auto;
-    /*position: relative;*/
 }
 
 /* Header/nav */
@@ -19,7 +18,6 @@ header {
     margin-bottom: 20px;
     width: 100%;
     height: 70px;
-    /*position: fixed;*/
 }
 
 nav {
@@ -125,26 +123,38 @@ main iframe {
 
 #nameme {
     grid-area: name;
+    width: 90%;
+    margin: 0 auto;
 }
 
 #photome {
     grid-area: photo;
+    width: 300px;
+    margin: 0 auto;
 }
 
 #about {
     grid-area: about;
+    width: 90%;
+    margin: 0 auto;
 }
 
 #extra {
     grid-area: extra;
+    width: 90%;
+    margin: 0 auto;
 }
 
 #philosophy {
     grid-area: philosophy;
+    width: 90%;
+    margin: 0 auto;
 }
 
 #look {
     grid-area: look;
+    width: 90%;
+    margin: 0 auto;
 }
 
 #projectsgrid {
@@ -163,26 +173,38 @@ main iframe {
 
 #p1title {
     grid-area: p1name;
+    width: 90%;
+    margin: 0 auto;
 }
 
 #p1image {
     grid-area: p1image;
+    width: 300px;
+    margin: 0 auto;
 }
 
 #p2title {
     grid-area: p2name;
+    width: 90%;
+    margin: 0 auto;
 }
 
 #p2image {
     grid-area: p2image;
+    width: 300px;
+    margin: 0 auto;
 }
 
 #p3title {
     grid-area: p3name;
+    width: 90%;
+    margin: 0 auto;
 }
 
 #p3image {
     grid-area: p3image;
+    width: 300px;
+    margin: 0 auto;
 }
 
 /* Footer */
