--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,7 @@ nav ul li a {
 
 .selected {
     height: 3px;
-    background-color: #bb133e;
+    background-color: #E0162B;
     margin-top: 4px;
 }
 
@@ -82,7 +82,7 @@ nav ul li a {
 }
 
 nav ul li a:hover .unselected{
-    background-color: #bb133e;
+    background-color: #E0162B;
 }
 
 /* Main content */
@@ -107,7 +107,7 @@ img {
 }
 
 a img {
-    border: 2px solid #bb133e;    
+    border: 2px solid #E0162B;    
 }
 
 iframe {
@@ -140,7 +140,7 @@ footer {
 }
 
 footer div {
-    color: #bb133e;
+    color: #E0162B;
     font-size: 11pt;
 }
 
@@ -158,7 +158,7 @@ footer div:last-of-type {
 
 footer a {
     text-decoration: none;
-    color: #bb133e;
+    color: #E0162B;
 }
 
 footer a:hover {
@@ -197,5 +197,5 @@ footer a:hover {
 
 }
 
-/* USA flag red: #bb133e */
+/* USA flag red: #E0162B */
 /* USA flag blue: #0052A5 */
