--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,10 +113,23 @@ a img {
 iframe {
     display: block;
     width: 100%;
-    height: 600px;
     margin: 0 auto;
     border-style: solid;
     border-color: #0052A5;
+}
+
+#resume {
+    height: 600px;
+}
+
+#holodemo {
+    height: 180px;
+}
+
+figcaption {
+    text-align: center;
+    font-weight: normal;
+    font-size: 12pt;
 }
 
 p {
@@ -184,8 +197,13 @@ footer a:hover {
         width: 520px;
     }
 
-    iframe {
+    #resume {
         height: 800px;
+    }
+
+    #holodemo {
+        width: 510px;
+        height: 300px;
     }
 
     .projectpic {
