--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@ header {
 #monogram {
     height: 65px;
     width: 65px;
-    margin: 0 auto;
+    margin: 0 auto 40px;
 }
 
 nav ul {
@@ -87,10 +87,29 @@ nav ul li a:hover .unselected{
 
 /* Main content */
 main {
+    width: 100%;
+    margin: 0 auto;
+}
+
+#indexgrid {
     width: 300px;
     display: grid;
     grid-gap: 20px;
     margin: 0 auto;
+}
+
+#projectgrid {
+    width: 300px;
+    display: grid;
+    margin: 20px auto 0;
+    grid-gap: 40px;
+}
+
+.proj {
+    width: 100%;
+    margin: 0 auto;
+    display: grid;
+    grid-gap: 20px;
 }
 
 h1 {
@@ -119,7 +138,8 @@ iframe {
 }
 
 #resume {
-    height: 600px;
+    width: 300px;
+    height: 500px;
 }
 
 #holodemo {
@@ -146,7 +166,7 @@ footer {
 
 #footwrap {
     width: 360px;
-    margin: 0 auto;
+    margin: 20px auto 20px;
     display: grid;
     grid-gap: 0;
     grid-auto-flow: column;
@@ -197,7 +217,16 @@ footer a:hover {
         width: 520px;
     }
 
+    #indexgrid {
+        width: 520px;
+    }
+
+    #projectgrid {
+        width: 500px;
+    }
+
     #resume {
+        width: 520px;
         height: 800px;
     }
 
@@ -211,7 +240,41 @@ footer a:hover {
     }
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 1000px) {
+    #headwrap {
+        width: 1000px;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-gap: 0;
+    }
+    
+    #monogram {
+        margin-bottom: 40px;
+    }
+
+    #projnav {
+        display: none;
+    }
+    
+    main {
+        width: 1000px;
+    }
+
+    #projectgrid {
+        width: 1000px;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-gap: 20px;
+    }
+
+    .proj {
+        grid-template-rows: 40px 300px 200px;
+        grid-gap: 70px;
+        height: 660px;
+    }
+
+    #resume {
+        width: 900px;
+        height: 1200px;
+    }
 
 }
 
