--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,37 @@ body {
     transition: opacity .25s;
 }
 
+/* Splash page */
+.splash {
+    padding-top: 100px;
+}
+
+.splashm {
+    padding: 20px;
+    margin: 0 auto;
+    width: 200px;
+}
+
+.fore {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    width: 250px;
+    margin: 10px auto 0;
+}
+
+.fore a {
+    display: inline-block;
+    width: 100%;
+    margin: 0 auto;
+    grid-gap: 20px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 15pt;
+    color: rgba(0, 0, 0, 0.66)
+}
+
+
+
 /* Header/nav */
 header {
     width: 100%;
@@ -81,7 +112,7 @@ nav ul li a {
     transition: background-color .3s;
 }
 
-nav ul li a:hover .unselected{
+a:hover .unselected{
     background-color: #E0162B;
 }
 
@@ -181,7 +212,7 @@ footer {
     margin: 20px auto 20px;
     display: grid;
     grid-gap: 0;
-    grid-auto-flow: column;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
 footer div {
