--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,7 +86,7 @@ nav ul {
 nav ul li {
     list-style-type: none;
     display: inline-block;
-    width: 100%;
+    width: 80%;
     margin: 0 auto;
     grid-gap: 20px;
     text-align: center;
@@ -164,11 +164,12 @@ img {
     display: block;
     width: 300px;
     margin: 0 auto;
-    border: 2px solid #0052A5;
+    border: 4px solid #0052A5;
+    border-radius: 20px;
 }
 
 a img {
-    border: 2px solid #E0162B;    
+    border: 4px solid #E0162B; 
 }
 
 iframe {
