--- a/assets/css/pustyle.css
+++ b/assets/css/pustyle.css
@@ -22,6 +22,33 @@ header {
     margin: 0 auto;
 }
 
+nav ul {
+    width: 100%;
+    display: grid;
+    grid-auto-flow: column;
+}
+
+nav ul li {
+    list-style: none;
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+nav ul li a {
+    text-decoration: none;
+    width: 100%;
+    text-align: center;
+    color: #E0162B;
+    font-size: 1.5rem;
+    border-bottom: 3px solid gray;
+    transition: border-bottom .5s;
+}
+
+nav ul li a:hover {
+    border-bottom: 3px solid #E0162B;
+}
+
 main {
     width: 40%;
     display: grid;
@@ -44,10 +71,17 @@ p {
     font-size: 1rem;
 }
 
+img {
+    width: 90%;
+    border: 2px solid #E0162B;
+    margin: 0 auto;
+}
+
 footer {
     color: #E0162B;
     width: 40%;
     display: grid;
     grid-gap: 20px;
     margin: 0 auto;
+    padding: 2rem;
 }
