--- a/assets/css/xyz.css
+++ b/assets/css/xyz.css
@@ -11,116 +11,13 @@ body {
     transition: opacity .25s;
 }
 
-/* Splash page */
-.splash {
-    padding-top: 100px;
-}
-
-.splashm {
-    padding: 20px;
-    margin: 0 auto;
-    width: 200px;
-}
-
-.fore {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    width: 250px;
-    margin: 10px auto 0;
-}
-
-.fore a {
-    display: inline-block;
-    width: 100%;
-    margin: 0 auto;
-    grid-gap: 20px;
-    text-align: center;
-    text-decoration: none;
-    font-size: 15pt;
-    color: rgba(0, 0, 0, 0.66)
-}
-
-
-
-/* Header/nav */
-header {
-    width: 100%;
-    padding-top: 10px;
-}
-
-#headwrap {
-    width: 360px;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: 20% 80%;
-    grid-gap: 0;
-    padding-bottom: 10px;
-}
-
-#projnav {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    width: 300px;
-    margin: 0 auto 10px;
-    grid-gap: 10px;
-    padding-bottom: 20px;
-}
-
-#projnav img {
-    width: 90px;
-}
-
-#monogram {
+#logo {
     height: 65px;
     width: 65px;
-    margin: 0 auto 40px;
-}
-
-nav ul {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    width: 250px;
-    margin: 10px auto 0;
-}
-
-nav ul li {
-    list-style-type: none;
-    display: inline-block;
-    width: 80%;
-    margin: 0 auto;
-    grid-gap: 20px;
-    text-align: center;
-}
-
-nav ul li a {
-    text-decoration: none;
-    font-size: 15pt;
-    color: rgba(0, 0, 0, 0.66)
-}
-
-.selected {
-    height: 3px;
-    background-color: #E0162B;
-    margin-top: 4px;
-}
-
-.unselected {
-    height: 3px;
-    background-color: rgb(167, 167, 167);
-    margin-top: 4px;
-    transition: background-color .3s;
-}
-
-a:hover .unselected{
-    background-color: #E0162B;
+    margin: 20px auto 40px;
 }
 
 /* Main content */
-main {
-    width: 100%;
-    margin: 0 auto;
-}
-
 #indexgrid {
     width: 300px;
     display: grid;
@@ -135,29 +32,11 @@ main {
     grid-gap: 40px;
 }
 
-.projectgridc {
-    width: 300px;
-    display: grid;
-    grid-gap: 20px;
-    margin: 0 auto;
-}
-
 .proj {
     width: 100%;
     margin: 0 auto;
     display: grid;
     grid-gap: 20px;
-}
-
-h1 {
-    text-align: center;
-    font-weight: normal;
-    font-size: 18pt;
-}
-
-h2 {
-    font-weight: normal;
-    font-size: 16pt;
 }
 
 img {
@@ -169,37 +48,7 @@ img {
 }
 
 a img {
-    border: 4px solid #E0162B;
-}
-
-iframe {
-    display: block;
-    width: 100%;
-    margin: 0 auto;
-    border-style: solid;
-    border-color: #0052A5;
-}
-
-#resume {
-    width: 300px;
-    height: 500px;
-}
-
-#holodemo {
-    height: 180px;
-}
-
-figcaption {
-    text-align: center;
-    font-weight: normal;
-    font-size: 12pt;
-}
-
-p {
-    width: 100%;
-    margin: 0 auto;
-    text-indent: 30px;
-    font-size: 14pt;
+    border: 3px solid #E0162B; 
 }
 
 /* Footer */
@@ -240,90 +89,6 @@ footer a {
 footer a:hover {
     color: rgba(0, 0, 0, 0.66);
 }
-
-/* Media queries */
-/* @media screen and (min-width: 600px) {
-    #headwrap {
-        width: 580px;
-        grid-template-columns: 20% 60% 20%;
-    }
-
-    nav ul {
-        width: 100%;
-    }
-
-    nav ul li a {
-        font-size: 18pt;
-    }
-
-    main {
-        width: 520px;
-    }
-
-    #indexgrid {
-        width: 520px;
-    }
-
-    #projectgrid {
-        width: 500px;
-    }
-
-    .projectgridc {
-        width: 520px;
-    }
-
-    #resume {
-        width: 520px;
-        height: 800px;
-    }
-
-    #holodemo {
-        width: 510px;
-        height: 300px;
-    }
-
-    .projectpic {
-        width: 520px;
-    }
-}
-
-@media screen and (min-width: 1000px) {
-    #headwrap {
-        width: 80%;
-        grid-template-columns: 33% 34% 33%;
-        grid-gap: 0;
-    }
-    
-    #monogram {
-        margin-bottom: 40px;
-    }
-
-    #projnav {
-        display: none;
-    }
-    
-    main {
-        width: 1000px;
-    }
-
-    #projectgrid {
-        width: 1000px;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-gap: 20px;
-    }
-
-    .proj {
-        grid-template-rows: 40px 300px 200px;
-        grid-gap: 70px;
-        height: 660px;
-    }
-
-    #resume {
-        width: 900px;
-        height: 1200px;
-    }
-
-} */
 
 /* USA flag red: #E0162B */
 /* USA flag blue: #0052A5 */
