--- a/assets/css/xyz.css
+++ b/assets/css/xyz.css
@@ -1,9 +1,14 @@
 * {
     margin: 0;
     padding: 0;
-    background-color: #EEE;
+    background-color: #fefefe;
     font-family: 'Segoe UI', 'Helvetica', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 400;
     color: rgba(0, 0, 0, 0.9);
+}
+
+html {
+    font-size: 14pt;
 }
 
 body {
@@ -25,6 +30,13 @@ body {
     margin: 0 auto;
 }
 
+#megrid {
+    width: 300px;
+    display: grid;
+    margin: 20px auto 0;
+    grid-gap: 40px;
+}
+
 #projectgrid {
     width: 300px;
     display: grid;
@@ -32,23 +44,47 @@ body {
     grid-gap: 40px;
 }
 
+#aboutgrid {
+    width: 300px;
+    display: grid;
+    margin: 0 auto;
+    grid-gap: 20px;
+}
+
 .proj {
-    width: 100%;
+    width: 300px;
     margin: 0 auto;
     display: grid;
-    grid-gap: 20px;
+    grid-gap: 30px;
+}
+
+.separator {
+    width: 100%;
+    margin: 40px auto 10px;
+    display: block;
+    color: #E0162B;
+}
+
+h1 {
+    font-size: 1.4rem;
+    font-weight: 500;
+    text-align: center;
+}
+
+p {
+    text-indent: 1rem;
 }
 
 img {
     display: block;
     width: 300px;
     margin: 0 auto;
-    border: 3px solid #0052A5;
+    border: 3px solid #E0162B;
     border-radius: 3px;
 }
 
 a img {
-    border: 3px solid #E0162B; 
+    border: 3px solid #0052A5; 
 }
 
 /* Footer */
@@ -61,24 +97,10 @@ footer {
     margin: 20px auto 20px;
     display: grid;
     grid-gap: 0;
-    grid-template-columns: 1fr 1fr 1fr;
 }
 
 footer div {
     color: #E0162B;
-    font-size: 11pt;
-}
-
-footer div:first-of-type {
-    text-align: right;
-}
-
-footer div:nth-child(2) {
-    text-align: center;
-}
-
-footer div:last-of-type {
-    text-align: left;
 }
 
 footer a {
@@ -88,6 +110,22 @@ footer a {
 
 footer a:hover {
     color: rgba(0, 0, 0, 0.66);
+}
+
+@media screen and (min-width: 800px) {
+    #indexgrid {
+        width: 800px;
+    }
+
+    #projectgrid {
+        width: 800px;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+    }
+
+    #aboutgrid {
+        width: 600px;
+    }
 }
 
 /* USA flag red: #E0162B */
