--- a/assets/css/xyz.css
+++ b/assets/css/xyz.css
@@ -51,6 +51,34 @@ body {
     grid-gap: 20px;
 }
 
+.picsgrid {
+    display: grid;
+    width: 300px;
+    margin: 0 auto;
+    grid-gap: 20px;
+}
+
+.electoralgrid {
+    display: grid;
+    width: 300px;
+    margin: 0 auto;
+    grid-gap: 20px;
+}
+
+.hologrid {
+    display: grid;
+    width: 300px;
+    margin: 0 auto;
+    grid-gap: 20px;
+}
+
+.fluentgrid {
+    display: grid;
+    width: 300px;
+    margin: 0 auto;
+    grid-gap: 20px;
+}
+
 .proj {
     width: 300px;
     margin: 0 auto;
@@ -64,6 +92,9 @@ body {
     display: block;
     color: #E0162B;
 }
+.projectpic {
+    width: 100%;
+}
 
 h1 {
     font-size: 1.4rem;
@@ -73,6 +104,8 @@ h1 {
 
 p {
     text-indent: 1rem;
+    width: 100%;
+    margin: 0 auto;
 }
 
 img {
@@ -85,6 +118,29 @@ img {
 
 a img {
     border: 3px solid #0052A5; 
+}
+
+iframe {
+    display: block;
+    width: 100%;
+    margin: 0 auto;
+    border-style: solid;
+    border-color: #0052A5;
+}
+
+#resume {
+    width: 300px;
+    height: 500px;
+}
+
+#holodemo {
+    height: 180px;
+}
+
+figcaption {
+    text-align: center;
+    font-weight: normal;
+    font-size: 12pt;
 }
 
 /* Footer */
@@ -125,6 +181,32 @@ footer a:hover {
 
     #aboutgrid {
         width: 600px;
+    }
+
+    .picsgrid {
+        width: 600px;
+    }
+    
+    .electoralgrid {
+        width: 600px;
+    }
+    
+    .hologrid {
+        width: 600px;
+    }
+    
+    .fluentgrid {
+        width: 600px;
+    }
+
+    #resume {
+        width: 520px;
+        height: 800px;
+    }
+
+    #holodemo {
+        width: 510px;
+        height: 300px;
     }
 }
 
