--- a/assets/css/xyz.css
+++ b/assets/css/xyz.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    background-color: #fefefe;
+    background-color: white;
     font-family: 'Segoe UI', 'Helvetica', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 400;
     color: rgba(0, 0, 0, 0.9);
@@ -120,10 +120,10 @@ p {
 
 img {
     display: block;
-    width: 300px;
+    width: 7rem;
     margin: 0 auto;
     border: 3px solid #E0162B;
-    border-radius: 3px;
+    border-radius: 100%;
 }
 
 a img {
