--- a/assets/css/test.css
+++ b/assets/css/test.css
@@ -1,5 +1,5 @@
 * {
-    color: #191919;
+    color: rgb(220, 60, 90);
     font-family: 'Arial Nova', Helvetica, sans-serif;
     font-size: 16pt;
     margin: 0;
@@ -16,21 +16,20 @@ body {
 
 .nav {
     text-decoration: none;
-    border-bottom: 1px solid #AFFFFF;
-    background-color: whitesmoke;
+    border-bottom: 1px solid rgb(220, 60, 90);
     width: 100%;
 }
 
 .nav:visited {
-    border-color: #AFFFFF;
+    border-color: rgb(220, 60, 90);
 }
 
 .nav:hover {
-    border-color: #191919;
+
 }
 
 .nav:active {
-    border-color: magenta;
+
 }
 
 header {
@@ -62,16 +61,9 @@ main {
     grid-template-columns: 1fr 1fr 1fr;
 }
 
-figure {
-    width: 100%;
-}
-
-figure img {
-    width: 100%;
-}
-
-figcaption {
-
+.project {
+    display: grid;
+    grid-gap: 5%;
 }
 
 footer {
