--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,329 +1,105 @@
 * {
+    color: rgb(220, 60, 90);
+    font-family: 'Arial Nova', Helvetica, sans-serif;
+    font-size: 16pt;
     margin: 0;
     padding: 0;
-    background-color: #eee;
-    font-family: 'Segoe UI', 'Helvetica', Tahoma, Geneva, Verdana, sans-serif;
-    color: rgba(0, 0, 0, 0.9);
+    font-weight: normal;
+    text-decoration: none;
 }
 
 body {
-    opacity: 0;
-    transition: opacity .25s;
+    background-color: white;
+    margin: 1rem auto;
+    width: 70%;
 }
 
-/* Splash page */
-.splash {
-    padding-top: 100px;
-}
-
-.splashm {
-    padding: 20px;
-    margin: 0 auto;
-    width: 200px;
-}
-
-.fore {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    width: 250px;
-    margin: 10px auto 0;
-}
-
-.fore a {
-    display: inline-block;
-    width: 100%;
-    margin: 0 auto;
-    grid-gap: 20px;
-    text-align: center;
+.nav {
     text-decoration: none;
-    font-size: 15pt;
-    color: rgba(0, 0, 0, 0.66)
+    border-bottom: 1px solid rgb(220, 60, 90);
+    transition: border-width .2s;
+    width: 100%;
 }
 
+.nav:visited {
+    border-color: rgb(220, 60, 90);
+}
 
+.nav:hover {
+    border-width: 5px;
+}
 
-/* Header/nav */
+.nav:active {
+
+}
+
 header {
-    width: 100%;
-    padding-top: 10px;
-}
-
-#headwrap {
-    width: 360px;
-    margin: 0 auto;
     display: grid;
-    grid-template-columns: 20% 80%;
-    grid-gap: 0;
-    padding-bottom: 10px;
+    grid-template-columns: 20% 70% 10%;
+    margin-bottom: 4rem;
 }
 
-#projnav {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    width: 300px;
-    margin: 0 auto 10px;
-    grid-gap: 10px;
-    padding-bottom: 20px;
-}
+#name {
 
-#projnav img {
-    width: 90px;
-}
-
-#monogram {
-    height: 65px;
-    width: 65px;
-    margin: 0 auto 40px;
-}
-
-nav ul {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    width: 250px;
-    margin: 10px auto 0;
-}
-
-nav ul li {
-    list-style-type: none;
-    display: inline-block;
-    width: 80%;
-    margin: 0 auto;
-    grid-gap: 20px;
-    text-align: center;
-}
-
-nav ul li a {
-    text-decoration: none;
-    font-size: 15pt;
-    color: rgba(0, 0, 0, 0.66)
-}
-
-.selected {
-    height: 3px;
-    background-color: #E0162B;
-    margin-top: 4px;
-}
-
-.unselected {
-    height: 3px;
-    background-color: rgb(167, 167, 167);
-    margin-top: 4px;
-    transition: background-color .3s;
-}
-
-a:hover .unselected{
-    background-color: #E0162B;
-}
-
-/* Main content */
-main {
-    width: 100%;
-    margin: 0 auto;
-}
-
-#indexgrid {
-    width: 300px;
-    display: grid;
-    grid-gap: 20px;
-    margin: 0 auto;
-}
-
-#projectgrid {
-    width: 300px;
-    display: grid;
-    margin: 20px auto 0;
-    grid-gap: 40px;
-}
-
-.projectgridc {
-    width: 300px;
-    display: grid;
-    grid-gap: 20px;
-    margin: 0 auto;
-}
-
-.proj {
-    width: 100%;
-    margin: 0 auto;
-    display: grid;
-    grid-gap: 20px;
-}
-
-h1 {
-    text-align: center;
-    font-weight: normal;
-    font-size: 18pt;
-}
-
-h2 {
-    font-weight: normal;
-    font-size: 16pt;
-}
-
-img {
-    display: block;
-    width: 300px;
-    margin: 0 auto;
-    border: 3px solid #0052A5;
-    border-radius: 3px;
-}
-
-a img {
-    border: 3px solid #E0162B; 
-}
-
-iframe {
-    display: block;
-    width: 100%;
-    margin: 0 auto;
-    border-style: solid;
-    border-color: #0052A5;
 }
 
 #resume {
-    width: 300px;
-    height: 500px;
-}
-
-#holodemo {
-    height: 180px;
-}
-
-figcaption {
-    text-align: center;
-    font-weight: normal;
-    font-size: 12pt;
-}
-
-p {
-    width: 100%;
-    margin: 0 auto;
-    text-indent: 30px;
-    font-size: 14pt;
-}
-
-/* Footer */
-footer {
-    padding: 20px 0;
-}
-
-#footwrap {
-    width: 360px;
-    margin: 20px auto 20px;
-    display: grid;
-    grid-gap: 0;
-    grid-template-columns: 1fr 1fr 1fr;
-}
-
-footer div {
-    color: #E0162B;
-    font-size: 11pt;
-}
-
-footer div:first-of-type {
     text-align: right;
 }
 
-footer div:nth-child(2) {
-    text-align: center;
+#contact {
+    text-align: right;
 }
 
-footer div:last-of-type {
-    text-align: left;
+main {
+    display: grid;
+    grid-gap: 10%;
 }
 
-footer a {
-    text-decoration: none;
-    color: #E0162B;
+h1 {
+    font-size: 24pt;
 }
 
-footer a:hover {
-    color: rgba(0, 0, 0, 0.66);
+h2 {
+    font-size: 18pt;
 }
 
-/* Media queries */
-@media screen and (min-width: 600px) {
-    #headwrap {
-        width: 580px;
-        grid-template-columns: 20% 60% 20%;
-    }
-
-    nav ul {
-        width: 100%;
-    }
-
-    nav ul li a {
-        font-size: 18pt;
-    }
-
-    main {
-        width: 520px;
-    }
-
-    #indexgrid {
-        width: 520px;
-    }
-
-    #projectgrid {
-        width: 500px;
-    }
-
-    .projectgridc {
-        width: 520px;
-    }
-
-    #resume {
-        width: 520px;
-        height: 800px;
-    }
-
-    #holodemo {
-        width: 510px;
-        height: 300px;
-    }
-
-    .projectpic {
-        width: 520px;
-    }
+.project a {
+    border: 0px solid rgb(220, 60, 90);
+    transition: border-width .2s;
 }
 
-@media screen and (min-width: 1000px) {
-    #headwrap {
-        width: 100%;
-        grid-template-columns: 33% 34% 33%;
-        grid-gap: 0;
-    }
+.project a:visited {
     
-    #monogram {
-        margin-bottom: 40px;
-    }
-
-    #projnav {
-        display: none;
-    }
-    
-    main {
-        width: 1000px;
-    }
-
-    #projectgrid {
-        width: 1000px;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-gap: 20px;
-    }
-
-    .proj {
-        grid-template-rows: 40px 300px 200px;
-        grid-gap: 70px;
-        height: 660px;
-    }
-
-    #resume {
-        width: 900px;
-        height: 1200px;
-    }
-
 }
 
-/* USA flag red: #E0162B */
-/* USA flag blue: #0052A5 */
+.project a:hover {
+    border-width: 5px;
+}
+
+.project a:active {
+    
+}
+
+img {
+    width: 100%;
+}
+
+p {
+    font-size: 14pt;
+}
+
+.grid {
+    display: grid;
+    grid-gap: 5%;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.project {
+    display: grid;
+    grid-gap: 5%;
+}
+
+footer {
+
+}
