--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 * {
-    color: rgba(0, 0, 0, 0.7);
+    color: rgba(255, 255, 255, 0.8);
     font-family: 'Arial Nova', Helvetica, sans-serif;
     font-size: 16pt;
     margin: 0;
@@ -9,7 +9,7 @@
 }
 
 body {
-    background-color: white;
+    background-color: #1e1c20;
     margin: 1rem auto;
     width: 70%;
 }
@@ -47,6 +47,7 @@ header {
 #resume {
     color: rgb(220, 60, 90);
     text-align: right;
+    margin: 0 1rem;
 }
 
 #contact {
@@ -70,11 +71,12 @@ h1 {
 
 h2 {
     color: rgb(220, 60, 90);
-    font-size: 18pt;
+    font-size: 20pt;
 }
 
 h3 {
     color: rgb(220, 60, 90);
+    font-size: 16pt;
 }
 
 figure {
@@ -114,25 +116,24 @@ img {
 
 iframe {
     width: 100%;
-    min-height: 20rem;
 }
 
 p {
     font-size: 14pt;
-    color: rgba(0, 0, 0, 0.7);
+    color: rgba(255, 255, 255, 0.8);
     width: 80%;
 }
 
 .pgrid {
     display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
     grid-gap: 5%;
-    grid-template-columns: 1fr 1fr 1fr;
-    margin-bottom: 2rem;
 }
 
 .project {
     display: grid;
-    grid-gap: 5%;
+    max-height: 20rem;
+    margin-bottom: 2rem;
 }
 
 footer {
