--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,6 +116,7 @@ img {
 
 iframe {
     width: 100%;
+    height: 500px;
 }
 
 p {
@@ -127,13 +128,13 @@ p {
 .pgrid {
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
-    grid-gap: 5%;
+    grid-gap: 3rem;
 }
 
 .project {
     display: grid;
-    max-height: 20rem;
     margin-bottom: 2rem;
+    grid-gap: 1rem;
 }
 
 footer {
