--- a/assets/css/test.css
+++ b/assets/css/test.css
@@ -3,12 +3,10 @@ body {
     height: 100vh;
 }
 
-header {
+div {
     width: 50%;
-    margin: auto 0;
-}
-
-main {
-    width: 50%;
-    margin: auto 0;
+    display: grid;
+    grid-auto-flow: rows;
+    margin: 0 auto;
+    padding: 0 1fr;
 }
