--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,15 @@
+/*
+Color Palette
+Bbackground: #f4f5ee
+Red: #CA6A82
+Blue: #6697B9
+Purple: #98879B
+Green: #829FA6
+*/
+
 * {
-    color: rgba(255, 255, 255, 0.8);
-    font-family: 'Arial Nova', Helvetica, sans-serif;
+    color: black;
+    font-family: 'arial nova', Helvetica, sans-serif;
     font-size: 16pt;
     margin: 0;
     padding: 0;
@@ -9,74 +18,145 @@
 }
 
 body {
-    background-color: #1e1c20;
-    margin: 1rem auto;
-    width: 70%;
-}
-
-.nav {
-    text-decoration: none;
-    border-bottom: 1px solid rgb(220, 60, 90);
-    transition: border-width .2s;
+    background-color: hsl(75, 27%, 94%);
+    margin: 0 auto;
     width: 100%;
-}
-
-.nav:visited {
-    border-color: rgb(220, 60, 90);
-}
-
-.nav:hover {
-    border-width: 5px;
-}
-
-.nav:active {
-
+    scroll-behavior: smooth;
 }
 
 header {
     display: grid;
-    grid-template-columns: 20% 70% 10%;
-    margin-bottom: 4rem;
-    color: rgb(220, 60, 90);
+    color: #CA6A82;
+    position: fixed;
+    padding: 1rem;
+    top: 0rem;
+    width: 100%;
+    margin: 0 auto;
+    background-color: hsla(69, 26%, 95%, 0.875);
+    backdrop-filter: blur(1px);
+    box-shadow: 0 .5rem 1rem hsla(0, 0%, 0%, 0.2);
+    z-index: 3;
 }
 
-#name {
-    color: rgb(220, 60, 90);
+h1 {
+    color: #ca6881;
+    font-size: 30pt;
 }
 
-#resume {
-    color: rgb(220, 60, 90);
-    text-align: right;
-    margin: 0 1rem;
+h2 {
+    color: #CA6A82;
+    font-size: 24pt;
+    margin-bottom: 1rem;
 }
 
-#contact {
-    color: rgb(220, 60, 90);
-    text-align: right;
+.title2 {
+    color: #CA6A82;
 }
 
-span a{
-    color: rgb(220, 60, 90);
+h3 {
+    color: #CA6A82;
+    font-size: 16pt;
+    margin-bottom: .5rem;
+}
+
+h4 {
+    color: #CA6A82;
+    font-size: 12pt;
+    margin-bottom: .5rem;
+}
+
+a {
+    color: #CA6A82;
+    border-bottom: 0 solid;
+    transition: border-width .1s;
+}
+
+a:hover {
+    border-width: .1rem;
+}
+
+p {
+    font-size: 14pt;
+    width: 100%;
+    margin-bottom: 1rem;
+    line-height: 1.2rem;
+}
+
+nav {
+    display: grid;
+    width: 80%;
+    margin: 0 auto;
+    grid-gap: 1rem;
+    grid-template-columns: 1rem 60vw auto auto;
+}
+
+nav span a {
+    color: #ca6a82;
+    text-decoration: none;
+}
+
+.logo {
+    width: 1rem;
+    margin: 0 .1rem;
 }
 
 main {
     display: grid;
-    grid-gap: 3rem;
 }
 
-h1 {
-    color: rgb(220, 60, 90);
-    font-size: 24pt;
+section {
+    position: relative;
+    display: grid;
+    padding: 5% 20%;
 }
 
-h2 {
-    color: rgb(220, 60, 90);
-    font-size: 20pt;
+.content-card {
+    margin: 0 auto;
+    padding: 1rem;
+    background-color: hsla(69, 28%, 95%, 0.875);
+    backdrop-filter: blur(1px);
+    box-shadow: 0 .3rem .7rem hsla(0, 0%, 0%, 0.2);
+    z-index: 2;
 }
 
-h3 {
-    color: rgb(220, 60, 90);
-    font-size: 16pt;
+.content-card a {
+    color: #ca6a82;
+}
+
+.image-link {
+    border: initial;
+}
+
+#intro {
+    padding: 10% 20% 5%;
+}
+
+#projects {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 2rem;
+}
+
+#bio {
+    display: grid;
+    grid-gap: .1rem;
+}
+
+.card1Link {
+    color: #CA6A82;
+    border-bottom: 0 solid;
+    transition: border-width .1s;
+}
+
+.card1Link:hover {
+    border-width: .1rem;
+}
+
+.project-images {
+    margin: 2rem 0;
+    display: grid;
+    grid-gap: 1rem;
+    grid-template-columns: auto auto auto;
 }
 
 figure {
@@ -93,25 +173,9 @@ figcaption a{
     text-decoration: underline;
 }
 
-.project a {
-    border: 0px solid rgb(220, 60, 90);
-    transition: border-width .2s;
-}
-
-.project a:visited {
-    
-}
-
-.project a:hover {
-    border-width: 5px;
-}
-
-.project a:active {
-    
-}
-
 img {
     width: 100%;
+    margin: 1rem 0;
 }
 
 iframe {
@@ -119,25 +183,21 @@ iframe {
     height: 500px;
 }
 
-p {
-    font-size: 14pt;
-    color: rgba(255, 255, 255, 0.8);
-    width: 80%;
-}
-
-.pgrid {
-    display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-gap: 3rem;
-}
-
-.project {
-    display: grid;
-    margin-bottom: 2rem;
-    grid-gap: 1rem;
-}
-
 footer {
-    color: rgb(220, 60, 90);
-    margin: 2rem 0;
+    background-color: #CA6A82;
+    color: rgb(247, 245, 242);
+    display: grid;
+    grid-gap: 1rem;
+    padding: 2rem 10rem;
+    grid-template-columns: auto auto auto;
+}
+
+footer span a {
+    color: rgb(247, 245, 242);
+    border-bottom: 0 solid;
+    transition: border-width .1s;
+}
+
+footer span a:hover {
+    border-width: .1rem;
 }
