--- a/assets/css/testStyle.css
+++ b/assets/css/testStyle.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'helvetica', 'arial', 'verdana', 'sans-serif';
     font-size: 14pt;
     color: #d0d0d0;
 }
@@ -39,15 +40,15 @@ section {
     padding: 1rem;
     display: grid;
     grid-gap: 2rem;
-}
-
-#landing {
-    width: 600px;
     background-color: #080808;
     border: 1px solid;
     border-image-slice: 1;
     border-width: 1px;
     border-image-source: radial-gradient(#000000 66%, #d0d0d0);
+}
+
+#landing {
+    width: 600px;
 }
 
 .divider {
@@ -69,4 +70,14 @@ section {
     align-items: center;
     width: 6rem;
     height: 6rem;
+}
+
+button, input, select, textarea {
+    font-family: inherit;
+    font-size: 100%;
+    background-color: #d0d0d0;
+    color: #080808;
+    border: 1px solid;
+    border-radius: 0;
+    padding: .3rem;
 }
