--- a/assets/css/testStyle.css
+++ b/assets/css/testStyle.css
@@ -1,9 +1,19 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'helvetica', 'arial', 'verdana', 'sans-serif';
+    font-family: 'Fira Code';
     font-size: 14pt;
     color: #d0d0d0;
+}
+
+@font-face {
+    font-family: 'FiraCode-VF';
+    src: '../fonts/FiraCode-VF.woff2' format('woff2-variations');
+}
+
+html {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 #bio {
@@ -14,70 +24,58 @@
     color: #A2FFFF;
 }
 
-#cs {
-    color: #FFFFA2;
-}
-
-#threeD {
-    color: #FFA2FF;
-}
-
 h2 {
     font-family: 'Major Mono Display';
-    font-size: 36pt;
     font-weight: 100;
+    font-size: 2rem;
     margin: 0 auto;
+    display: block;
+}
+
+header {
+    width: 100%;
+    background-color: #222;
+    display: grid;
+    border-bottom: 1px solid #444;
+}
+
+nav {
+    margin: 1rem auto;
+    display: grid;
+    grid-auto-flow: column;
 }
 
 body {
     width: 100%;
-    background-color: black;
+    background-color: #222;
     display: grid;
 }
 
 section {
-    margin: 10rem auto;
-    padding: 1rem;
+    margin: 0 auto;
     display: grid;
-    grid-gap: 2rem;
-    background-color: #080808;
-    border: 1px solid;
-    border-image-slice: 1;
-    border-width: 1px;
-    border-image-source: radial-gradient(#000000 66%, #d0d0d0);
-}
-
-#landing {
-    width: 600px;
+    grid-gap: 1rem;
+    align-items: center;
+    border-left: 1px solid #444;
+    border-right: 1px solid #444;
 }
 
 .divider {
     height: 1px;
-    background: linear-gradient(.25turn, #080808, #d0d0d0 50%, #080808);
+    background: #d0d0d0;
 }
 
 .category {
-    margin: 0 auto;
+    margin: 1rem;
     display: grid;
-    grid-gap: 2rem;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-auto-flow: column;
 }
 
 .box-label {
-    border: 1px solid #d0d0d0;
+    border: 1px solid #444;
     display: grid;
     align-items: center;
-    width: 6rem;
-    height: 6rem;
-}
-
-button, input, select, textarea {
-    font-family: inherit;
-    font-size: 100%;
-    background-color: #d0d0d0;
-    color: #080808;
-    border: 1px solid;
-    border-radius: 0;
-    padding: .3rem;
+    width: 4rem;
+    height: 4rem;
 }
