--- a/assets/css/testStyle.css
+++ b/assets/css/testStyle.css
@@ -3,7 +3,7 @@
     padding: 0;
     font-family: 'Fira Code';
     font-size: 14pt;
-    color: #d0d0d0;
+    color: #eee;
 }
 
 @font-face {
@@ -16,12 +16,21 @@ html {
     -moz-osx-font-smoothing: grayscale;
 }
 
-#bio {
+/* #bio {
     color: #FFA2A2
 }
 
 #ux {
     color: #A2FFFF;
+} */
+
+h1 {
+    font-family: 'Major Mono Display';
+    font-weight: 100;
+    font-size: 2rem;
+    margin: 0 auto;
+    display: block;
+    color: #FFA2A2
 }
 
 h2 {
