--- a/assets/css/testStyle.css
+++ b/assets/css/testStyle.css
@@ -65,8 +65,6 @@ section {
     display: grid;
     grid-gap: 1rem;
     align-items: center;
-    border-left: 1px solid #444;
-    border-right: 1px solid #444;
 }
 
 .divider {
@@ -79,6 +77,11 @@ section {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-auto-flow: column;
+}
+
+.box {
+    width: 400px;
+    height: 150px;
 }
 
 .box-label {
