--- a/assets/css/testStyle.css
+++ b/assets/css/testStyle.css
@@ -80,8 +80,14 @@ section {
 }
 
 .box {
-    width: 400px;
+    position: relative;
+    width: 300px;
     height: 150px;
+}
+
+.boxBack {
+    width:100%;
+    height:100%;
 }
 
 .box-label {
