--- a/assets/css/testStyle.css
+++ b/assets/css/testStyle.css
@@ -8,7 +8,7 @@
 
 @font-face {
     font-family: 'FiraCode-VF';
-    src: '../fonts/FiraCode-VF.woff2' format('woff2-variations');
+    src: url(../fonts/FiraCode-VF.woff2) format('woff2-variations');
 }
 
 html {
