--- a/assets/css/testStyle.css
+++ b/assets/css/testStyle.css
@@ -1,14 +1,14 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Fira Code';
+    font-family: 'FiraCode-VF';
     font-size: 14pt;
     color: #eee;
 }
 
 @font-face {
     font-family: 'FiraCode-VF';
-    src: url(../fonts/FiraCode-VF.woff2) format('woff2-variations');
+    src:  url(../fonts/FiraCode-VF.woff2) format('woff2-variations');
 }
 
 html {
