--- a/assets/css/testStyle.css
+++ b/assets/css/testStyle.css
@@ -1,14 +1,19 @@
+@font-face {
+    font-family: 'FiraCode-VF';
+    src:  url(../fonts/FiraCode-VF.woff2) format('woff2-variations');
+}
+
+@font-face {
+    font-family: 'MajorMonoDisplay';
+    src:  url(../fonts/MajorMonoDisplay-Regular.ttf) format('truetype');
+}
+
 * {
     margin: 0;
     padding: 0;
     font-family: 'FiraCode-VF';
     font-size: 14pt;
-    color: #eee;
-}
-
-@font-face {
-    font-family: 'FiraCode-VF';
-    src:  url(../fonts/FiraCode-VF.woff2) format('woff2-variations');
+    color: #ddd;
 }
 
 html {
@@ -25,16 +30,16 @@ html {
 } */
 
 h1 {
-    font-family: 'Major Mono Display';
+    font-family: 'MajorMonoDisplay';
     font-weight: 100;
     font-size: 2rem;
     margin: 0 auto;
     display: block;
-    color: #FFA2A2
+    color: #FFA2A2;
 }
 
 h2 {
-    font-family: 'Major Mono Display';
+    font-family: 'MajorMonoDisplay';
     font-weight: 100;
     font-size: 2rem;
     margin: 0 auto;
@@ -44,23 +49,32 @@ h2 {
 header {
     width: 100%;
     display: grid;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.4);
-    backdrop-filter: blur(10px) brightness(80%);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+    /* backdrop-filter: blur(10px) brightness(80%); */
 }
 
 nav {
     margin: 1rem auto;
     display: grid;
     grid-auto-flow: column;
+    grid-gap: 4rem;
+}
+
+nav a {
+    font-family: 'MajorMonoDisplay';
+    font-weight: 100;
+    font-size: 2rem;
+    text-decoration: none;
+    margin: 0 auto;
 }
 
 body {
     width: 100%;
-    background-color: #222;
+    background-color: #111;
     display: grid;
-    background-image: url(../images/galaxy.jpg);
+    /* background-image: url(../images/galaxy.jpg);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: cover; */
 }
 
 section {
@@ -68,13 +82,8 @@ section {
     display: grid;
     grid-gap: 1rem;
     align-items: center;
-    border: 1px solid rgba(255, 255, 255, 0.4);
-    backdrop-filter: blur(10px) brightness(50%);
-}
-
-.divider {
-    height: 1px;
-    background: #d0d0d0;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    /* backdrop-filter: blur(10px) brightness(50%); */
 }
 
 .category {
@@ -82,17 +91,4 @@ section {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-auto-flow: column;
-}
-
-.boxBack {
-    width:100%;
-    height:100%;
-}
-
-.box-label {
-    border: 1px solid rgba(255, 255, 255, 0.4);
-    display: grid;
-    align-items: center;
-    width: 4rem;
-    height: 4rem;
 }
