--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,7 +116,14 @@ section {
     background-color: hsla(0, 0%, 95%, 0.875);
     backdrop-filter: blur(1px);
     box-shadow: 0 .3rem .7rem hsla(0, 0%, 0%, 0.2);
+    border: 4px solid rgba(255, 255, 255, 0.1);
+    border-radius: 3px;
     z-index: 2;
+    transition: all .3s ease-in-out;
+}
+
+.content-card:hover {
+    border: 4px solid #ca6881;
 }
 
 .content-card a {
@@ -185,19 +192,26 @@ iframe {
 
 footer {
     background-color: #CA6A82;
-    color: rgb(240, 240, 240);
+    display: grid;
+    width: 100%;
+}
+
+.footwrap {
+    width: 70%;
+    margin: 0 auto;
     display: grid;
     grid-gap: 1rem;
     padding: 2rem 5%;
+    color: rgb(240, 240, 240);
 }
 
-footer span a {
+.footwrap span a {
     color: rgb(240, 240, 240);
     border-bottom: 0 solid;
     transition: border-width .1s;
 }
 
-footer span a:hover {
+.footwrap span a:hover {
     border-width: .1rem;
 }
 
@@ -230,12 +244,12 @@ footer span a:hover {
         grid-template-columns: auto auto auto;
     }
 
-    footer {
+    /* footer {
         background-color: #CA6A82;
         color: rgb(240, 240, 240);
         display: grid;
         grid-gap: 1rem;
         padding: 2rem;
         grid-template-columns: 1fr 1fr 1fr;
-    }
+    } */
 }
