--- a/assets/css/testStyle.css
+++ b/assets/css/testStyle.css
@@ -42,7 +42,7 @@ header {
     position: fixed;
     border-bottom: 1px solid rgba(255, 255, 255, 0.5);
     z-index: 1;
-    backdrop-filter: blur(5px) brightness(50%);
+    backdrop-filter: blur(5px);
 }
 
 nav {
