--- a/assets/css/test2.css
+++ b/assets/css/test2.css
@@ -1,3 +1,5 @@
 body {
-    background: url(../svg/galaxy.svg);
+    background-color: #000;
+    background-image: url(../svg/Dot.svg);
+    background-size: 16px 16px;
 }
