--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,3 +32,8 @@ footer {
     color: rgba(255, 255, 255, 0.5);
     margin: 0 auto;
 }
+
+a {
+    color: #ff00ff;
+    text-decoration: underline;
+}
