--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,10 +5,10 @@
     --background-muted: #3d383d;
     --foreground-default: #EBF5E1;
     --foreground-muted: #C4CCBC;
-    --color-accent: #e075db;
+    --color-accent: #75d9e0;
     --color-muted-accent: #a37ca1;
     --color-contrast: #58f56d;
-    --color-bright: #86fff9;
+    --color-bright: #e075db;
     --typeface-default: 'Karla', sans-serif;
     --typeface-serif: 'Vollkorn', serif;
     --default-text-size: 20px;
